tests/single_instruction_translation_validation/mcsema/register-variants-samereg/vpsllq_ymm_ymm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:218:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 32, i8* nonnull %7) #22
            ^
0.02user 0.03system 0:00.07elapsed 77%CPU (0avgtext+0avgdata 27472maxresident)k
0inputs+16outputs (0major+3259minor)pagefaults 0swaps
